# CPA_crd_manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  replenish_codex.py  simple_register.py  start.bat  start.sh  start_dev.bat  start_dev.sh
docs/: api.md  frontend_design.md
docs/superpowers/specs/: 2026-03-31-async-register-engine-design.md
frontend/: README.md  config.example.yaml  email_utils.py  index.html  kill_all_chrome.bat  package-lock.json  package.json  postcss.config.js  server.js  start.bat  start.sh  vite.config.ts
frontend/src/: App.tsx  i18n-runtime.ts  i18n.ts  main.tsx
frontend/src/components/global-modal/: GlobalModalProvider.tsx  modalContext.ts  useGlobalModal.ts
frontend/src/hooks/: useLockedInterval.ts  useRunLock.ts
frontend/src/lib/: api.ts  domainStats.d.ts  domainStats.js  providerStrategies.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  OAuthCallback.tsx
frontend/src/pages/dashboard/: ArchivedCredentialsPanel.tsx  ArchivedCredentialsPanelV2.tsx  ArchivedCredentialsPanelV3.tsx  CredentialManager.tsx  SettingsPanel.tsx  SettingsPanelV2.tsx  SettingsPanelV3.tsx
frontend/src/shared/: providerRuntimeStrategies.d.ts  providerRuntimeStrategies.js
internal_register/: email_utils.py  proxy_utils.py  register.py  sentinel_browser.py  utf8_utils.py
src/codex_cpa_credential_manager/: app_defaults.py  cli.py  cpa_callback_test.py  email_utils.py  login_utils.py
src/codex_cpa_credential_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+7 files in other folders)
